--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,18 @@
 /* write your override styles here */
+
+#wall .tag-1  {
+    display: none;
+}
+
+#wall #tag-2 {
+    display: none; ;
+}
+ #wall, .tag-1, #tag-2, #tag-3, #tag-4, #tag-5, #tag-6, #tag-7 {
+    display: none;
+  }
+#wall #tag-2 div#wall #tag-3.slick  {
+    display: none;
+}
+div#wall #tag-3.slick #wall #tag-4 {
+    display: none;
+}
