--- a/css/paint.css
+++ b/css/paint.css
@@ -30,8 +30,8 @@ body {
   display: block;
 }
 
-#wall #tag-2 {
-  background: url(../images/tag-2.png) no-repeat;
+#wall #tag-2 {  background: url(../images/tag-2.png) no-repeat;
+
   z-index: 6;
   display: block;
 }
